Added generate_code.bat as prebuild event to the scripting_layer.

--- a/scripting_layer/scripting_layer.vcxproj
+++ b/scripting_layer/scripting_layer.vcxproj
@@ -135,7 +135,7 @@
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Link>
     <PreBuildEvent>
-      <Command>call $(SolutionDir)code_generation\generate_code.bat</Command>
+      <Command>call $(SolutionDir)\code_generation\generate_code.bat;</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
