--- a/engine_layer/engine_layer.vcxproj.filters
+++ b/engine_layer/engine_layer.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClInclude Include="SerializedField.h">
       <Filter>Serialization</Filter>
     </ClInclude>
+    <ClInclude Include="ISerializable.h">
+      <Filter>Serialization</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
